--- a/projectmovie/package.json
+++ b/projectmovie/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.1.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-owl-carousel": "^2.3.3",
     "react-owl-carousel2": "^0.3.0",
     "react-redux": "^7.2.8",
     "react-router-dom": "^5.3.0",
