--- a/projectmovie/package.json
+++ b/projectmovie/package.json
@@ -9,6 +9,7 @@
     "antd": "^4.19.5",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "formik": "^2.2.9",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-owl-carousel": "^2.3.3",
@@ -17,7 +18,8 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
     "redux": "^4.1.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
