--- a/projectmovie/package.json
+++ b/projectmovie/package.json
@@ -9,6 +9,7 @@
     "antd": "^4.19.5",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "classnames": "^2.3.1",
     "formik": "^2.2.9",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
