--- a/projectmovie/package.json
+++ b/projectmovie/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
     "formik": "^2.2.9",
+    "moment": "^2.29.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-owl-carousel": "^2.3.3",
