--- a/projectmovie/package.json
+++ b/projectmovie/package.json
@@ -15,6 +15,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
     "react": "^18.0.0",
+    "react-bootstrap": "^2.3.1",
     "react-dom": "^18.0.0",
     "react-owl-carousel": "^2.3.3",
     "react-owl-carousel2": "^0.3.0",
